# esp32_swift_led_and_switch_example

./: CMakeLists.txt  sdkconfig
main/: BridgingHeader.h  CMakeLists.txt  Dummy.c  Main.swift
